# notion-sozluk-otomasyonu

./: .env  .gitignore  README.md  main.py  pyproject.toml
